# image_classifier

./: CMakeLists.txt  README.md  package.xml
include/: example_knn.h
scripts/: image_node.py  train_classifier.py
src/: example_knn.cpp
